css/style.css
.movie {
    cursor: pointer;
}

.movie-title {
    max-width: 100%;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

/* Hover animations for posters */
.movie-poster-container {
    overflow: hidden;
    box-shadow: 0 .125rem .25rem rgba(0,0,0,.15);
    transition: .5s;
}

.movie-poster-container:hover {
    overflow: hidden;
    box-shadow: 0 .5rem 1rem rgba(0,0,0,.25);
    transform: translateY(-5px);
    transition: .5s;
}

.movie-rating {
    font-size: 0.9em;
    top: 0;
    right: 0;
}

.movie-rating .rating {
    font-size: 1em;
}

a.movie:hover {
    text-decoration: none;
}

/* Single movie styles */
.movie-backdrop {
    width: 100vw;
    min-height: 90vh;
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
    position: relative;
}

.backdrop-overlay {
    position: absolute;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.6);
}

#desc-title {
    font-size: 1.75em;
    opacity: 0.75;
}

#rating-container {
    opacity: 0.75;
}

#toast-container {
    top: 0;
    right: 0;
    z-index: 2000;
}

.td-poster {
    width: 100px;
}

